--- a/index.html
+++ b/index.html
@@ -17,31 +17,36 @@
 </head>
 <body>
     <header class="header">
+        <div class="header-container container">
         <nav class="nav">
 <a href="./index.html" class="link logo-link"><span class="logo-accent">Web</span>Studio</a>
-    <ul class="list">
+    <ul class="list nav-list">
         <li class="item page-now" > <a href="/" class="nav-link link">Студія</a></li>
         <li class="item"> <a href="./portfolio.html" class="nav-link link">Портфоліо</a></li>
         <li class="item"> <a href="/" class="nav-link link">Контакти</a></li>
     </ul>
 </nav>
-<ul class="list">
-    <li class="item"><a href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
-    <li class="item"><a href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
+<ul class="list data">
+    <li class="item contacts-item"><a href="mailto:info@devstudio.com" class="link contact-link">info@devstudio.com</a></li>
+    <li class="item contacts-item"><a href="tel:+380961111111" class="link contact-link">+38 096 111 11 11</a></li>
 </ul>
+</div>
     </header>
 <main>
      <!-- -------------------ORDER--------------- -->
     <section class="section order">
+        <div class="container">
     <h1 class="main-heading">Ефективні рішення для вашого бізнесу</h1>
     <button class="button main-button" type="button">Замовити послугу</button>
+</div>
 </section>
 
     <!---------------ADVANTAGES-------------- -->
 
-<section class="advantages">
+<section class="advantages section">
+    <div class="container">
     <h2 class="visually-hidden">Наши преимущества</h2>
-    <ul class="list">
+    <ul class="list advantages-items">
         <li class="item">
             <h3 class="third-heading">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -59,23 +64,27 @@
             <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li>
     </ul>
+</div>
 </section>
 
 <!-- ----------------whatdo------------ -->
 
 <section class="section whatdo">
+    <div class="container">
     <h2 class="second-heading">Чим ми займаємося</h2>
     <ul class="list">
         <li class="item" ><img src="./images/img-1.jpg" alt="Комп'ютери" width="370"></li>
         <li class="item" ><img src="./images/img-2.jpg" alt="Телефони" width="370"></li>
         <li class="item" ><img src="./images/img-3.jpg" alt="Планшети" width="370"></li>
     </ul>
+</div>
 </section>
 
 <!-- --------------TEAM-------- -->
 
-
 <section class="section team">
+
+    <div class="container">
     <h2 class="second-heading">Наша команда</h2>
     <ul class="list">
         <li class="item"><img src="./images/img-4.jpg" alt="Член команди 1" width="270">
@@ -95,11 +104,13 @@
             <p class="text" lang="en">UI Designer</p>
         </li>
     </ul>
+</div>
 </section>
 </main>
 
   <!-- -------------------FOOTER---------- -->  
 <footer class="footer">
+    <div class="container">
     <a href="/" class="logo-link link"><span class="logo-accent">Web</span>Studio</a>
    <address>
     <ul class="list">
@@ -114,6 +125,9 @@
         </li>
     </ul>
    </address>
+</div>
 </footer>
+
+
 </body>
 </html>
