--- a/index.html
+++ b/index.html
@@ -88,20 +88,28 @@
     <h2 class="second-heading">Наша команда</h2>
     <ul class="list">
         <li class="item"><img src="./images/img-4.jpg" alt="Член команди 1" width="270">
-            <h3 class="third-heading">Ігор Дем'яненко</h3>
+            <div class="team-name">
+                <h3 class="third-heading">Ігор Дем'яненко</h3>
             <p class="text" lang="en">Product Designer</p>
+            </div>
         </li>
         <li class="item"><img src="./images/img-5.jpg" alt="Член команди 2" width="270">
-            <h3 class="third-heading">Ольга Рєпіна</h3>
+            <div class="team-name">
+                <h3 class="third-heading">Ольга Рєпіна</h3>
             <p class="text" lang="en">Frontend Developer</p>
+            </div>
         </li>
         <li class="item"><img src="./images/img-6.jpg" alt="Член команди 3" width="270">
-            <h3 class="third-heading">Микола Тарасов</h3>
+            <div class="team-name">
+                <h3 class="third-heading">Микола Тарасов</h3>
             <p class="text" lang="en">Marketing</p>
+            </div>
         </li>
         <li class="item"><img src="./images/img-7.jpg" alt="Член команди 4" width="270">
-            <h3 class="third-heading">Михайло Єрмаков</h3>
+            <div class="team-name">
+                <h3 class="third-heading">Михайло Єрмаков</h3>
             <p class="text" lang="en">UI Designer</p>
+            </div>
         </li>
     </ul>
 </div>
