--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,8 @@
     <li class="item examples-item"><button type="button" class="button">Дизайн</button></li>
     <li class="item examples-item"><button type="button" class="button">Маркетинг</button></li>
 </ul>
-</div>
 <!-- ---------------Карточки з роботами------- -->
-<div class="container cards">
+<div class="cards">
 <ul class="list cards-list">
     <li class="item"> <a href="./" class="link"><img src="./images/portfolio1.jpg" alt="Технокряк" width="370">
         <div class="card-info">
@@ -115,6 +114,7 @@
     </a>
     </li>
    </ul>
+</div>
 </div>
 
 </section>
